# RosettesDiscord

./: .editorconfig  .gitignore  README.md  Rosettes.sln
Admin Panel/: .env.example  app.py
Admin Panel/core/: database.py  session.py
Admin Panel/routes/: action.py  home.py  panel.py  session.py
Admin Panel/static/: style.css
Admin Panel/templates/: cmds.html  create-app.jinja2  create-autoroles.jinja2  index.html  index.jinja2  layout.html  layout.jinja2  panel.html  panel.jinja2  roles.html  roles.jinja2  settings.html  settings.jinja2
Admin Panel/utils/: db_getters.py  db_helpers.py  miscfuncs.py
Rosettes/: .env.example  Program.cs  Rosettes.csproj  appsettings.json
Rosettes/Controllers/: ApiController.cs
Rosettes/Core/: EventManager.cs  Global.cs  InteractionManager.cs  RosettesMain.cs  ServiceManager.cs  Settings.cs
Rosettes/Database/: AlarmRepository.cs  AuthRepository.cs  DatabasePool.cs  FarmRepository.cs  GuildRepository.cs  IGuildRepository.cs  PetRepository.cs  RpgRepository.cs  UserRepository.cs  (+1 more)
Rosettes_Panel/: app.py  pyproject.toml
Rosettes_Panel/core/: bot_api.py  config.py  csrf.py  database.py  session.py
Rosettes_Panel/routes/: action.py  home.py  panel.py  session.py
Rosettes_Panel/static/: style.css  vanillaEmojiPicker.json
Rosettes_Panel/templates/: create-app.jinja2  create-autoroles.jinja2  index.jinja2  layout.jinja2  manage-app.jinja2  panel.jinja2  roles.jinja2  settings.jinja2
Rosettes_Panel/templates/prompts/: error.jinja2  success.jinja2
Rosettes_Panel/utils/: db_helpers.py  miscfuncs.py  page_helpers.py
(+105 files in other folders)
