[project]
name = "rosettes-panel"
version = "0.1.0"
description = "Web administration panel for the Rosettes Discord bot."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-login>=0.6.3",
    "mysql-connector-python>=9.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
